# bdk_wallet

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  justfile
.github/: zizmor.yml
.github/workflows/: audit.yml  check_rust_stable.yml  code_coverage.yml  cont_integration.yml  cron-update-rust.yml  zizmor.yml
ci/: pin-msrv.sh
docs/adr/: 0003_events.md
example-crates/: Cargo.toml
examples/: bitcoind_rpc.rs  compiler.rs  electrum.rs  esplora_async.rs  esplora_blocking.rs  justfile  mnemonic_to_descriptors.rs  multi_keychain_wallet.rs  old_wallet.rs  policy.rs  simple_keyring.rs
examples/example_n_keychains/: Cargo.toml
examples/example_n_keychains/src/: main.rs
examples/example_utils/: mod.rs
examples/example_wallet_electrum/: Cargo.toml
examples/example_wallet_electrum/src/: main.rs
examples/example_wallet_esplora_async/: Cargo.toml
examples/example_wallet_esplora_async/src/: main.rs
examples/example_wallet_esplora_blocking/: Cargo.toml
examples/example_wallet_esplora_blocking/src/: main.rs
examples/example_wallet_rpc/: Cargo.toml
examples/example_wallet_rpc/src/: main.rs
examples/multi_keychain/: README.md  address_generation.rs  balance_tracking.rs  migration_guide.rs  persistence.rs  wallet.rs
src/: lib.rs  persist_test_utils.rs  test_utils.rs  types.rs
src/descriptor/: dsl.rs  error.rs  mod.rs  policy.rs  template.rs
src/keyring/: changeset.rs  error.rs  migration.rs  mod.rs
src/keys/: bip39.rs  mod.rs
src/wallet/: changeset.rs  coin_selection.rs  error.rs  event.rs  export.rs  locked_outpoints.rs  mod.rs  params.rs  persisted.rs  signer.rs  tx_builder.rs  utils.rs
tests/: add_foreign_utxo.rs  build_fee_bump.rs  keyring.rs  persisted_wallet.rs  psbt.rs  wallet.rs  wallet_event.rs
wallet/: CHANGELOG.md  Cargo.toml  README.md
wallet/examples/: compiler.rs  n_keychains.rs  policy.rs
wallet/src/: lib.rs  persist_test_utils.rs  test_utils.rs  types.rs
wallet/src/descriptor/: checksum.rs  error.rs  mod.rs  policy.rs  template.rs
wallet/src/keyring/: mod.rs
wallet/src/keys/: mod.rs
wallet/src/wallet/: changeset.rs  coin_selection.rs  error.rs  export.rs  keyring.rs  mod.rs  params.rs  persisted.rs  signer.rs  tx_builder.rs
wallet/tests/: add_foreign_utxo.rs  build_fee_bump.rs  keyring.rs  persisted_wallet.rs  psbt.rs  wallet.rs
