[package]
name = "bdk_wallet"
homepage = "https://bitcoindevkit.org"
version = "3.0.0-alpha.0"
repository = "https://github.com/bitcoindevkit/bdk_wallet"
documentation = "https://docs.rs/bdk_wallet"
description = "A modern, lightweight, descriptor-based wallet library"
keywords = ["bitcoin", "wallet", "descriptor", "psbt"]
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Bitcoin Dev Kit Developers"]
edition = "2021"
rust-version = "1.85.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bdk_chain = { version = "0.23.1", features = ["miniscript", "serde"], default-features = false }
bitcoin = { version = "0.32.6", features = ["serde", "base64"], default-features = false }
miniscript = { version = "12.3.1", features = ["serde"], default-features = false }
rand_core = { version = "0.6.0" }
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }

# Optional dependencies
anyhow = { version = "1.0.98", optional = true }
bdk_file_store = { version = "0.21.1", optional = true }
bip39 = { version = "2.0", optional = true }
tempfile = { version = "3.20.0", optional = true }

[features]
default = ["std"]
std = ["bitcoin/std", "bitcoin/rand-std", "miniscript/std", "bdk_chain/std"]
compiler = ["miniscript/compiler"]
all-keys = ["keys-bip39"]
keys-bip39 = ["bip39"]
rusqlite = ["bdk_chain/rusqlite"]
file_store = ["bdk_file_store"]
test-utils = ["std", "anyhow", "tempfile"]

[dev-dependencies]
anyhow = "1"
assert_matches = "1.5.0"
bdk_bitcoind_rpc = { version = "0.21.0" }
bdk_electrum = { version = "0.23.1" }
bdk_esplora = { version = "0.22.1", features = ["async-https", "blocking-https", "tokio"] }
bdk_wallet = { path = ".", features = ["rusqlite", "file_store", "test-utils"] }
clap = { version = "4.5.17", features = ["derive", "env"] }
ctrlc = "3.4.6"
rand = "0.8"
tempfile = "3"
tokio = { version = "1.38.1", features = ["rt", "rt-multi-thread", "macros"] }

[[example]]
name = "mnemonic_to_descriptors"
path = "examples/mnemonic_to_descriptors.rs"
required-features = ["all-keys"]

[[example]]
name = "miniscriptc"
path = "examples/compiler.rs"
required-features = ["compiler"]

[[example]]
name = "electrum"

[[example]]
name = "esplora_async"

[[example]]
name = "esplora_blocking"

[[example]]
name = "bitcoind_rpc"

[[example]]
name = "simple_keyring"
